# milkingpy

./: .drone.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  history.py  milking.drawio  pyproject.toml  tmp.py
app/: cli.py  db.py  interesticker.py  logic.py  main.py  telegram.py  test.py  test_strategy.py
