[tool.poetry]
name = "milkingpy"
version = "0.1.0"
description = ""
authors = ["Кизянов Антон Олегович <kizianov.ao@svrauto.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
python-decouple = "^3.8"
requests = "^2.31.0"
kucoin-python = "^1.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
