[tool.poetry]
name = "milkingpy"
version = "0.1.0"
description = ""
authors = ["Кизянов Антон Олегович <kizianov.ao@svrauto.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
loguru = "0.7.2"
python-decouple = "3.8"
kucoin-python = "1.0.17"
aiohttp = "^3.9.3"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
